# lunkvay-rs

./: .gitignore  API_FRONTEND.md  Cargo.toml  GEMINI.md  README.md  Trunk.toml  index-1934dd0acbf858e.css  index-ab00efe6236aa5a1.css  index.css  index.html  lunkvay-rs-39753f11b5027dff.js  lunkvay-rs-39753f11b5027dff_bg.wasm  lunkvay-rs-62333ceeb0b80f3b.js  lunkvay-rs-62333ceeb0b80f3b_bg.wasm  lunkvay-rs-73716641abad1af.js  lunkvay-rs-73716641abad1af_bg.wasm  lunkvay-rs-a665f18b8509237d.js  lunkvay-rs-a665f18b8509237d_bg.wasm  lunkvay-rs-aad0bb2caa9c59d.js  lunkvay-rs-aad0bb2caa9c59d_bg.wasm  lunkvay-rs-b64075fab3e417ea.js  lunkvay-rs-b64075fab3e417ea_bg.wasm
src/: app.module.scss  app.rs  config.rs  main.rs  utils.rs
src/api/: auth.rs  base.rs  chat.rs  chat_members.rs  chat_messages.rs  error.rs  friends.rs  image.rs  mod.rs  profile.rs  user.rs
src/components/: friend_card.module.scss  friend_card.rs  full_friend_card.module.scss  full_friend_card.rs  mod.rs  navigation.module.scss  navigation.rs  spinner.module.scss  spinner.rs
src/components/chat/: chat_members_panel.module.scss  chat_members_panel.rs  chat_settings_window.module.scss  chat_settings_window.rs  create_chat_window.module.scss  create_chat_window.rs  messages.module.scss  messages.rs  mod.rs
src/components/profile/: editing_window.module.scss  editing_window.rs  mod.rs
src/models/: auth.rs  chat.rs  friends.rs  mod.rs  profile.rs  user.rs
src/pages/: chats.module.scss  chats.rs  friends.module.scss  friends.rs  login.module.scss  login.rs  mod.rs  profile.module.scss  profile.rs
