[package]
name = "lunkvay-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.11", features = ["csr"] }
leptos_router = "0.8.9"
reqwasm = "0.5.0"
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "1.0"
wasm-bindgen-futures = "0.4.54"
web-sys = { version = "0.3.81", features = ["Window", "Storage"]}
stylance = "0.7.1"
