[package]
name = "lunkvay-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.11", features = ["csr"] }
leptos_router = "0.8.9"
reqwasm = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "1.0"
wasm-bindgen-futures = "0.4.54"
web-sys = { version = "0.3.81", features = ["Window", "Storage", "File", "FileList", "HtmlInputElement", "Url", "FormData", "Blob"]}
stylance = "0.7.1"
uuid = { version = "1.8.0", features = ["serde", "v4", "js"] }
jsonwebtoken = "9.3.0"
chrono = { version = "0.4.38", features = ["serde"] }
serde_repr = "0.1.20"
leptos-use = { version = "0.16.3", features = ["use_websocket", "use_infinite_scroll", "use_event_listener"] }
